[package]
name = "s2pl"
version = "0.1.0"
authors = ["nikkokun <mizutaninikkou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
quickersort = "3.0.1"
rdxsort = "0.3.0"
parking_lot = "0.10.0"
